@@ -22,6 +22,7 @@ Broker:
   messages will be retained on the remote broker.
 - Incoming bridge connections are now detected by checking if bit 8 of the
   protocol version number is set. This requires support from the remote broker.
+- Add support for notification_topic option.
 - Fix reloading of persistence_file and persistence_location.
 - Fix broker crash on incorrect protocol number.
 - Fix missing COMPAT_ECONNRESET define on Windows.
